Upgrade elide from 7.0.0 to 7.1.0